<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.ahu.cst.xbchzh.MainActivity" >

    <ScrollView 
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        >
         <TextView
        android:id="@+id/restartView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="18sp"
        android:text="@string/logs" />
    </ScrollView>
   

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
	    <Button
	        android:id="@+id/stateBtn"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="start"
	        android:onClick="stateShow"
	        android:text="@string/stateBtn"
	        android:background="@drawable/button_style"
	        android:textColor="#ffffff"
	        />
	    <Button
	        android:id="@+id/restartBtn"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:onClick="restartServer"
	        android:text="@string/restartBtn" 
	        android:background="@drawable/restartbtn_style"
	        android:textColor="#ffffff"
	        />
	    <Button
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:onClick="clearContent"
	        android:text="@string/clearBtn"
	        android:background="@drawable/button_style"
	        android:textColor="#ffffff"
	        />
	    <Button
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:onClick="showlog"
	        android:text="@string/showlogBtn"
	        android:background="@drawable/button_style"
	        android:textColor="#ffffff"
	        />
    </LinearLayout>
</LinearLayout>